--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,3 +1,3 @@
-<p>home works!</p>
-<app-upcoming></app-upcoming>
+<app-search></app-search>
+<app-now-playing></app-now-playing>
 <app-top-rated></app-top-rated>
