--- a/src/app/ui/toolbar/toolbar.html
+++ b/src/app/ui/toolbar/toolbar.html
@@ -1,10 +1,6 @@
-<div class="toolbar">
-    <div class="title">
-        <a href=""><h1>NgMovies</h1></a>
-    </div>
-    <div class="toolbar-btn">
-        <button class="button-glob">Mes favoris</button>
-        <button class="button-glob">Connexion</button>
-        
-    </div>
-</div>
+
+<header class="film-header">
+
+    <div class="film-bg"></div>
+    <a href=""><h1>NgMovies</h1></a>
+</header>
