--- a/src/app/ui/now-playing/now-playing.html
+++ b/src/app/ui/now-playing/now-playing.html
@@ -1,10 +1,10 @@
 <main>
     <div class="category">
         <header>
-            <h3>Les mieux notés</h3>
+            <h3>Dernières sorties</h3>
         </header>
         <div class="category-container">
-            @for (item of topRatedMovie(); track $index) {
+            @for (item of nowPlayingMovie(); track $index) {
                 <a class="movie-card" href="">
                     <h5>{{item.title}}</h5>
                     <p>{{item.release_date}}</p>
