--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,3 +1,4 @@
 <app-search></app-search>
-<app-now-playing></app-now-playing>
-<app-top-rated></app-top-rated>
+<div class="movie">
+    <app-movies-list></app-movies-list>
+</div>
