--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,4 +1,9 @@
-<app-search></app-search>
-<div class="movie">
-    <app-movies-list></app-movies-list>
-</div>
+<main>
+    <div>
+        <app-search></app-search>
+    </div>
+    <div class="movie">
+        <app-movies-list></app-movies-list>
+        <app-movies-list></app-movies-list>
+    </div>
+</main>
