--- a/src/app/ui/toolbar/toolbar.html
+++ b/src/app/ui/toolbar/toolbar.html
@@ -1,6 +1,12 @@
 
 <header class="film-header">
 
-    <div class="film-bg"></div>
-    <a href=""><h1>NgMovies</h1></a>
+    <div class="film-bg">
+        <div></div>
+        <a href=""><h1>NgMovies</h1></a>
+        <div class="toolbar-btn">
+            <button class="button-glob" routerLink="new-user">Connexion</button>
+            
+        </div>
+    </div>
 </header>
