--- a/src/app/ui/toolbar/toolbar.scss
+++ b/src/app/ui/toolbar/toolbar.scss
@@ -14,6 +14,7 @@
         z-index: 2;
         font: 700 clamp(20px, 5vw, 48px)/1.1 system-ui, sans-serif;
         text-shadow: 3px 3px 3px rgba(0,0,0,.6);
+        
     }
 
     a{
@@ -36,6 +37,9 @@
         animation: film-scroll 80s linear infinite;
         will-change: background-position;
         opacity: 0.8;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
     
     @keyframes film-scroll{
