--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,13 @@
     --yel: #ECEFCA;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 *{
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,8 +21,9 @@
     background-color: var(--blueC);
     color: white;
     font-weight: bold;
-    border-radius: 5px;
     border: none;
+    border-radius: 5px;
+    
     cursor: pointer;
     transition: 230ms ease-in-out;
     font-size: 15px;
