--- a/src/app/ui/movies/movies-list/movies-list.html
+++ b/src/app/ui/movies/movies-list/movies-list.html
@@ -1,5 +1,5 @@
 <h4>Titre de la catégorie</h4>
-<div class="cat-div">
+<div class="carousel" #scrollContainer>
     @for (item of moviesList(); track $index) { 
         <a class="movie-card" href="">
             <h4>{{item.title}}</h4>
