--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,30 @@
+
 <app-toolbar></app-toolbar>
-<div class="main-container">
-  <router-outlet></router-outlet>
-</div>
+<mat-sidenav-container class="example-container">
+  <mat-sidenav #sidenav [mode]="mode.value || 'over'">
+    
+    <div class="btn">
+      <br>
+      
+
+      <button class="button-87">Bouton 2</button>
+      <button class="button-87">Bouton 2</button>
+      <button class="button-87">Bouton 3</button>
+      <button class="button-87">Bouton 4</button>
+      <button class="button-87">Bouton 5</button>
+    </div>
+  </mat-sidenav>
+  <mat-sidenav-content container-text-color="">
+    <!-- Toolbar toujours visible -->
+    
+      <button class="menu-btn-close" (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon></button>
+      
+    
+
+    <!-- Contenu des routes -->
+    <div class="main-content">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
