--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,9 +1,4 @@
 <main>
-    <div>
-        <app-search></app-search>
-    </div>
-    <div class="movie">
-        <app-movies-list></app-movies-list>
-        <app-movies-list></app-movies-list>
-    </div>
+    <app-movies-list class="movie-list"></app-movies-list>
+    <app-movies-list class="movie-list"></app-movies-list>
 </main>
