--- a/src/app/ui/reactiv-form/reactiv-form.scss
+++ b/src/app/ui/reactiv-form/reactiv-form.scss
@@ -12,23 +12,19 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         width: 700px;
-
         
     }
 
-    input{
-        border: none;
-        width: 500px;
-        height: 35px;
-        border-radius: 5px;
-        box-shadow: 2px 2px 5px 0px var(--blueF);
-        transition: 230ms ease-in-out;
-        &:hover{
-            scale: 0.99;
-        }
-        margin: 15px;
-    }
 
+}
+.mat-icon {
+  vertical-align: middle;
+  color: lightseagreen;
+}
+
+mat-form-field{
+    width: 500px;
+    
 }
