--- a/src/app/ui/toolbar/toolbar.html
+++ b/src/app/ui/toolbar/toolbar.html
@@ -1,12 +1,30 @@
 
-<header class="film-header">
-
-    <div class="film-bg">
-        <div></div>
+<header>
+    <div class="title">
         <a href=""><h1>NgMovies</h1></a>
-        <div class="toolbar-btn">
-            <button class="button-glob" routerLink="new-user">Connexion</button>
-            
-        </div>
+        <button (click)="showSearch = !showSearch" matIconButton ><mat-icon>search</mat-icon></button>
+        @if(showSearch){
+            <input type="text">
+        }
     </div>
+    <div class="toolbar-btn">
+        <button matIconButton [matMenuTriggerFor]="beforeMenu" aria-label="Example icon-button with a menu">
+            <mat-icon>person_outline</mat-icon>
+        </button>
+        <mat-menu #beforeMenu="matMenu" xPosition="before">
+        <button mat-menu-item>
+            <mat-icon>favorite_border</mat-icon>
+            <span>Favoris</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>autorenew</mat-icon>
+            <span>Compte</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>power_settings_new</mat-icon>
+            <span>Déconnexion</span>
+        </button>
+        </mat-menu>
+    </div>
+    
 </header>
