--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,4 +1,4 @@
 <main>
-    <app-movies-list class="movie-list"></app-movies-list>
-    <app-movies-list class="movie-list"></app-movies-list>
+    <app-movies-list class="movie-list" category="/now_playing"></app-movies-list>
+    <app-movies-list class="movie-list" category="/top_rated"></app-movies-list>
 </main>
