--- a/src/app/ui/movies/movies-list/movies-list.scss
+++ b/src/app/ui/movies/movies-list/movies-list.scss
@@ -1,14 +1,14 @@
 .movie-list-container{
   color: white;
-  
+  padding-top: 15px;
 }
 
 .card-list {
   
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr); /* 8 colonnes égales */
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
   button {
     margin-top: 5px;
     position: relative;
@@ -91,9 +91,19 @@ h4, h5{
   display: flex;
   flex-direction: column;
   justify-content: end;
-  max-width: 200px;
   border: none;
-  gap: 1rem;
+ 
+  
+
+//   .text-ellipsis {
+//   white-space: nowrap;      /* reste sur une seule ligne */
+//   overflow: hidden;         /* cache le reste */
+//   text-overflow: ellipsis;  /* ajoute ... à la fin */
+//   max-width: 200px;         /* largeur max (à adapter) */
+//   display: block;           /* ou inline-block */
+//   cursor: help;             /* pointeur spécial pour info */
+// }
+ 
   
 
   mat-card-actions{
@@ -101,10 +111,15 @@ h4, h5{
     justify-content: center;
     gap: 1rem;
   }
+  mat-card-header{
+    padding-bottom: 15px;
+  }
   
   a{
     
     img{
+      max-width: 100%;
+  height: auto;
       border-radius: 10px;
       border: 1px solid #f73c1b;
       transition: 250ms ease-in-out;
