--- a/src/app/ui/movies/movies-list/movies-list.html
+++ b/src/app/ui/movies/movies-list/movies-list.html
@@ -1,5 +1,8 @@
 <div class="movie-list-container">
-    <h4>{{categoryTitle()}}</h4>
+    <div class="title">
+        <h3>{{categoryTitle()}}</h3>
+        <button class=".button-glob"><mat-icon>keyboard_arrow_down</mat-icon></button>
+    </div>
     <div class="card-list">
         @if (this._router.url === '/home') {
             @for (item of moviesList().slice(0,8); track $index) { 
@@ -7,7 +10,9 @@
                     <mat-card-header>
                         <mat-card-title class="text-ellipsis" [attr.title]="item.title">{{item.title}}</mat-card-title>
                     </mat-card-header>
-                    <a href=""><img mat-card-image [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path" alt="Photo of a Shiba Inu"></a>
+                    <mat-card-content>
+                        <a href=""><img [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
+                    </mat-card-content>
                     <!-- <mat-card-actions>
                         <button matButton>LIKE</button>
                         <button matButton>ADD</button>
@@ -20,7 +25,7 @@
                     <mat-card-header>
                         <mat-card-title class="text-ellipsis" [attr.title]="item.title">{{item.title}}</mat-card-title>
                     </mat-card-header>
-                    <a href=""><img mat-card-image [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path" alt="Photo of a Shiba Inu"></a>
+                    <a href=""><img [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
                     <!-- <mat-card-actions>
                         <button matButton>LIKE</button>
                         <button matButton>ADD</button>
