--- a/src/app/ui/movies/movies-list/movies-list.scss
+++ b/src/app/ui/movies/movies-list/movies-list.scss
@@ -3,98 +3,27 @@
   padding-top: 15px;
 }
 
+.title{
+  display: flex;
+  align-items: center;
+}
 .card-list {
-  
   display: grid;
-  grid-template-columns: repeat(8, 1fr); /* 8 colonnes égales */
-  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  align-items: end;
+  
   gap: 1rem;
-  button {
-    margin-top: 5px;
-    position: relative;
-    padding: 5px 20px;
-    border-radius: 7px;
-    border: 1px solid#f73c1b;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 2px;
-    background: transparent;
-    color: #fff;
-    overflow: hidden;
-    box-shadow: 0 0 0 0 transparent;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-  }
-  button:hover {
-  background: #f73c1b;
-  box-shadow: 0 0 15px 5px #720d0d;
-  -webkit-transition: all 0.2s ease-out;
-  -moz-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
 }
-
-button:hover::before {
-  -webkit-animation: sh02 0.5s 0s linear;
-  -moz-animation: sh02 0.5s 0s linear;
-  animation: sh02 0.5s 0s linear;
-}
-
-button::before {
-  content: '';
-  display: block;
-  width: 0px;
-  height: 86%;
-  position: absolute;
-  top: 7%;
-  left: 0%;
-  opacity: 0;
-  background: #fff;
-  box-shadow: 0 0 50px 30px #fff;
-  -webkit-transform: skewX(-20deg);
-  -moz-transform: skewX(-20deg);
-  -ms-transform: skewX(-20deg);
-  -o-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-}
-
-@keyframes sh02 {
-  from {
-    opacity: 0;
-    left: 0%;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-    left: 100%;
-  }
-}
-
-button:active {
-  box-shadow: 0 0 0 0 transparent;
-  -webkit-transition: box-shadow 0.2s ease-in;
-  -moz-transition: box-shadow 0.2s ease-in;
-  transition: box-shadow 0.2s ease-in;
-}
-}
-h4, h5{
+h3,h4, h5{
   color: white;
 }
-
-
 .movie-card{
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
+  flex-grow: 1;
+  flex-basis: 200;
   border: none;
  
   
-
+////// TEST ELLIPSE
 //   .text-ellipsis {
 //   white-space: nowrap;      /* reste sur une seule ligne */
 //   overflow: hidden;         /* cache le reste */
@@ -104,29 +33,19 @@ h4, h5{
 //   cursor: help;             /* pointeur spécial pour info */
 // }
  
-  
-
-  mat-card-actions{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
   mat-card-header{
     padding-bottom: 15px;
   }
-  
+  mat-card-content{
+
+  }
   a{
     
     img{
-      max-width: 100%;
-  height: auto;
-      border-radius: 10px;
-      border: 1px solid #f73c1b;
-      transition: 250ms ease-in-out;
-      padding: 5px;
+      
     }
     img:hover{
-      box-shadow: 0px 0px 15px 5px #720d0d;
+      box-shadow: 0px 0px 15px 5px #961010;
       -webkit-transition: all 0.2s ease-out;
       -moz-transition: all 0.2s ease-out;
       transition: all 0.2s ease-out;
