--- a/src/app/ui/toolbar/toolbar.scss
+++ b/src/app/ui/toolbar/toolbar.scss
@@ -12,30 +12,25 @@ header{
         display: flex;
 
     }
-
-    button{
-        border: none;
-        background-color: rgba(0, 0, 0, 0);
-        
-    }
-    mat-icon{
-        color: white;
-        font-size: 35px;
-        width: 35px;
-        height: 35px;     
-    }
-    .film-bg{
-        display: flex;
-    }
-
-    a{
-        text-decoration: none;
-        color: white;
-        transition: 230ms ease-in-out;
-
-        &:hover{
-            scale: 0.98;
-        }
-    }
+}
+button{
     
-} 
+}        
+    
+mat-icon{
+    color: white;
+    font-size: 35px;
+    width: 35px;
+    height: 35px;     
+}
+
+a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    transition: 230ms ease-in-out;
+
+    &:hover{
+        scale: 0.98;
+    }
+}
+    
