--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,14 +9,11 @@ mat-sidenav{
 mat-sidenav-content{
     background-color: rgb(17, 16, 16);
 }
-.menu-btn{
-    margin-left: 15px;
-    margin-top: 20px;
+.btn-4{
+    margin-left: 10px;
+    margin-top: 10px;
 }
-.menu-btn-close{
-    margin-left: 15px;
-    margin-top: 20px;
-} 
+
 .btn{
     display: flex;
     flex-direction: column;
