--- a/src/app/ui/toolbar/toolbar.html
+++ b/src/app/ui/toolbar/toolbar.html
@@ -1,30 +1,18 @@
 
 <header>
-    <div class="title">
+    <div class="title flex">
         <a href=""><h1>NgMovies</h1></a>
-        <button (click)="showSearch = !showSearch" matIconButton ><mat-icon>search</mat-icon></button>
-        @if(showSearch){
-            <input type="text">
-        }
     </div>
-    <div class="toolbar-btn">
-        <button matIconButton [matMenuTriggerFor]="beforeMenu" aria-label="Example icon-button with a menu">
-            <mat-icon>person_outline</mat-icon>
-        </button>
-        <mat-menu #beforeMenu="matMenu" xPosition="before">
-        <button mat-menu-item>
-            <mat-icon>favorite_border</mat-icon>
-            <span>Favoris</span>
-        </button>
-        <button mat-menu-item>
-            <mat-icon>autorenew</mat-icon>
-            <span>Compte</span>
-        </button>
-        <button mat-menu-item>
-            <mat-icon>power_settings_new</mat-icon>
-            <span>Déconnexion</span>
-        </button>
-        </mat-menu>
+    <div class="movie-mode flex">
+        <button class="mode-btn">Film / Série<span></span></button>
     </div>
-    
+    <div class="toolbar-btn flex">
+        <button>Mes films</button>
+        <!-- <button><mat-icon>person_outline</mat-icon></button> -->
+        <button>Mon compte</button>
+    </div>
 </header>
+<!-- <mat-icon>power_settings_new</mat-icon>
+<mat-icon></mat-icon>
+<mat-icon></mat-icon>
+<mat-icon></mat-icon> -->
