--- a/src/app/ui/toolbar/toolbar.scss
+++ b/src/app/ui/toolbar/toolbar.scss
@@ -1,34 +1,92 @@
 
 header{
-    height: 90px;
+    height: 120px;
     align-items: center;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 15px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    
     
     .title{
         display: flex;
 
     }
 }
-button{
-    
-}        
-    
-mat-icon{
-    color: white;
-    font-size: 35px;
-    width: 35px;
-    height: 35px;     
+
+.flex{
+    display: flex;
+
 }
+
+
+.mode-btn {
+  border: none;
+  display: block;
+  position: relative;
+  padding: 0.7em 2.4em;
+  font-size: 18px;
+  background: transparent;
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  color: rgb(255, 255, 255);
+  z-index: 1;
+  font-family: inherit;
+  font-weight: 500;
+  border-radius: 5px;
+}
+
+.mode-btn span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  border: 4px solid rgb(255, 255, 255);
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.mode-btn span::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 8%;
+  height: 500%;
+  background: black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-60deg);
+  transition: all 0.6s;
+}
+
+.mode-btn:hover span::before {
+  transform: translate(-50%, -50%) rotate(-90deg);
+  width: 100%;
+  background: rgb(255, 255, 255);
+}
+
+.mode-btn:hover {
+  color: rgb(0, 0, 0);
+}
+
+.mode-btn:active span::before {
+  background: #ff2828;
+}
+
+
+
 
 a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     transition: 230ms ease-in-out;
-
+    font-size: 20px;
+    
     &:hover{
         scale: 0.98;
     }
