--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,75 +11,45 @@ html, body {
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
-button {
-  margin-top: 5px;
-  position: relative;
-  padding: 5px 20px;
-  border-radius: 7px;
-  border: 1px solid#7e1e0d;
-  font-size: 14px;
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 2px;
-  background: transparent;
+
+.custom-btn {
+  display: flex;
   color: #fff;
-  overflow: hidden;
-  box-shadow: 0 0 0 0 transparent;
-  -webkit-transition: all 0.2s ease-in;
-  -moz-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
+  width: 60px;
+  height: 40px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  color: #a50000;
+  padding: 0;
+  border: 1px solid #a50000;
+  border-radius: 5px;
+  // box-shadow: 0 0 8px #a50000, 0 0 10px inset;
 }
-button:hover {
-  background: #7e1e0d;
-  box-shadow: 0 0 15px 5px #720d0d;
-  -webkit-transition: all 0.2s ease-out;
-  -moz-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
+.btn-4:hover{
+  box-shadow: 0 0 8px #a50000, 0 0 10px inset;
 }
-button:hover::before {
-  -webkit-animation: sh02 0.5s 0s linear;
-  -moz-animation: sh02 0.5s 0s linear;
-  animation: sh02 0.5s 0s linear;
-}
-button::before {
-  content: '';
-  display: block;
-  width: 0px;
-  height: 86%;
+.btn-4:after {
   position: absolute;
-  top: 7%;
-  left: 0%;
+  content: "";
+  top: 3px;
+  left: 2px;
+  width: 89%;
+  height: 80%;
+  border: 1px solid #a50000;
+  border-radius: 5px;
+  box-shadow: 0 0 8px #a50000 inset;
   opacity: 0;
-  background: #fff;
-  box-shadow: 0 0 50px 30px #fff;
-  -webkit-transform: skewX(-20deg);
-  -moz-transform: skewX(-20deg);
-  -ms-transform: skewX(-20deg);
-  -o-transform: skewX(-20deg);
-  transform: skewX(-20deg);
+  transition: all 0.3s ease;
 }
-
-@keyframes sh02 {
-  from {
-    opacity: 0;
-    left: 0%;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-    left: 100%;
-  }
-}
-
-button:active {
-  box-shadow: 0 0 0 0 transparent;
-  -webkit-transition: box-shadow 0.2s ease-in;
-  -moz-transition: box-shadow 0.2s ease-in;
-  transition: box-shadow 0.2s ease-in;
+.btn-4:hover:after {
+  opacity: 1;
+  
 }
 
 
