--- a/src/app/ui/movies/movies.html
+++ b/src/app/ui/movies/movies.html
@@ -1,1 +1,1 @@
-<app-movies-list category="/top_rated" categoryTitle="En salle maintenant"></app-movies-list>
+<app-movies-list [category]="category()" [categoryTitle]="categoryTitle()"></app-movies-list>
