--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,35 @@
-
+.search-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.search-container{
+    position: relative;
+}
+.search-bar{
+    width: 100%;
+    box-sizing: border-box;
+}
+.search-icon{
+    position: absolute;
+    right: 38px;      
+    top: 52%;       
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: white;
+}
+.search-bar {
+  margin: 30px;
+  background: #2c2c2c;
+  border: none;
+  outline: none;
+  width: 700px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 9999px;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+  color: #ffffff;
+}
 .main-content{
   padding: 15px;
 }
@@ -8,6 +39,7 @@ mat-sidenav{
 }
 mat-sidenav-content{
     background-color: rgb(17, 16, 16);
+    margin: 0;
 }
 .btn-4{
     margin-left: 10px;
