--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -10,13 +10,8 @@
     width: 100%;
     box-sizing: border-box;
 }
-.search-icon{
-    position: absolute;
-    right: 38px;      
-    top: 52%;       
-    transform: translateY(-50%);
-    pointer-events: none;
-    color: white;
+.search-btn{
+   
 }
 .search-bar {
   margin: 30px;
