--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,7 @@
         <mat-icon >apps</mat-icon>
       </button>
       <div class="search-container">
-        <input class="search-bar" type="text"><mat-icon class="search-icon">search</mat-icon>
+        <input class="search-bar" type="text"><button class="search-btn"><mat-icon class="search-icon">search</mat-icon></button>
       </div>
       <div></div>
     </div>
