--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 
 <app-toolbar></app-toolbar>
 
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container class="main-container">
   <mat-sidenav #sidenav [mode]="mode.value || 'over'" (click)="sidenav.toggle()">
     <div class="btn">
       <br>
