--- a/src/app/ui/movies/movies-list/movies-list.html
+++ b/src/app/ui/movies/movies-list/movies-list.html
@@ -13,7 +13,7 @@
                         {{item.title}}
                     </div>
                     <div class="img">
-                        <a href=""><img [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
+                        <a [routerLink]="['/movie', item.id]"><img [class.home]="isHome()" [class.movies]="!isHome()" [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
                     </div>
                 </div>
             }
@@ -24,7 +24,7 @@
                         {{item.title}}
                     </div>
                     <div>
-                        <a href=""><img [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
+                        <a [routerLink]="['/movie', item.id]"><img [class.home]="isHome()" [class.movies]="!isHome()" [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
                     </div>
                 </div>
             }
