--- a/src/app/ui/movies/movies-list/movies-list.scss
+++ b/src/app/ui/movies/movies-list/movies-list.scss
@@ -2,7 +2,7 @@
   color: white;
   margin: 0 60px;
   padding: 20px 20px;
-  border: 1px solid rgba(255, 0, 0, 0.171);
+  // border: 1px solid rgba(255, 0, 0, 0.171);
   border-radius: 20px;
 }
 .title{
@@ -15,7 +15,7 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   align-items: end;
-  gap: 1rem;
+  gap: 1.5rem;
   width: 100%;
   box-sizing: border-box;
 }
@@ -34,6 +34,13 @@ h3,h4, h5{
   border: none;
   width: 100%;
 }
+img{
+  border: 2px solid white;
+} 
+img.home{
+  -webkit-box-reflect: below 2.5px
+    linear-gradient(transparent, rgba(0,0,0,0.001), rgba(0,0,0,0.01), rgba(0,0,0,0.2));
+}
 .movie-card a img{
   border-radius: 10px;
   width: 100%;
@@ -44,7 +51,7 @@ h3,h4, h5{
 }
 .movie-card a img:hover{
   box-shadow: 0px 0px 15px 5px #b31212;
-  scale: 1.2;
+  scale: 1.05;
 }
   
 ////// TEST ELLIPSE
