--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,4 +1,5 @@
 <main>
     <app-movies-list class="movie-list" category="now_playing" categoryTitle="En salle maintenant"></app-movies-list>
-    <!-- <app-movies-list class="movie-list" category="top_rated" categoryTitle="Les mieux notés"></app-movies-list> -->
+    <br><br>
+    <app-movies-list class="movie-list" category="top_rated" categoryTitle="Les mieux notés"></app-movies-list> -->
 </main>
