--- a/src/app/ui/movie/movie.html
+++ b/src/app/ui/movie/movie.html
@@ -1,19 +1,22 @@
-<div>
-    <p>{{ movie | json }}</p>
+<div class="main">
   @if (movie(); as m) {
-    <h2>{{ m.title }}</h2>
-    <p>{{ m.overview }}</p>
-
-    <img [src]="'https://image.tmdb.org/t/p/w500' + m.poster_path" 
-         alt="{{ m.title }}">
-    <img [src]="'https://image.tmdb.org/t/p/w500' + m.backdrop_path" 
-         alt="{{ m.title }}">
-
-    <ul>
-      <li><strong>Date de sortie :</strong> {{ m.release_date }}</li>
-      <li><strong>Note :</strong> {{ m.vote_average }} / 10</li>
-      <li><strong>Durée :</strong> {{ m.runtime }} min</li>
-    </ul>
+    <div class="info-container">
+      <p>{{ m.overview }}</p>
+      
+      <!-- <img [src]="'https://image.tmdb.org/t/p/w500' + m.poster_path" 
+      alt="{{ m.title }}"> -->
+      
+      <ul>
+          <li><strong>Date de sortie :</strong> {{ m.release_date }}</li>
+          <li><strong>Note :</strong> {{ m.vote_average }} / 10</li>
+          <li><strong>Durée :</strong> {{ m.runtime }} min</li>
+        </ul>
+    </div>
+    <div class="img-container">
+        <h2>{{ m.title }}</h2>
+        <img class="back-img" [src]="'https://image.tmdb.org/t/p/w780' + m.backdrop_path" 
+             alt="{{ m.title }}">
+    </div>
   } @else {
     <p>Chargement du film...</p>
   }
