--- a/src/app/ui/movies/movies-list/movies-list.scss
+++ b/src/app/ui/movies/movies-list/movies-list.scss
@@ -14,10 +14,19 @@
 .card-list.home{
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  align-items: end;
+  // align-items: start;
   gap: 1.5rem;
   width: 100%;
   box-sizing: border-box;
+  transition: 250ms ease-in-out;
+}
+.card-list.home:hover a{
+  opacity: 0.4;
+  transition: 250ms ease-in-out;
+}
+.card-list.home:hover a:hover{
+  opacity: 1;
+  transition: 250ms ease-in-out;
 }
 .card-list.movies{
   display: grid;
@@ -33,9 +42,12 @@ h3,h4, h5{
 .movie-card{
   border: none;
   width: 100%;
+  
 }
+
 img{
   border: 2px solid white;
+  box-shadow: 5px 5px 10px rgb(0, 0, 0);
 } 
 img.home{
   -webkit-box-reflect: below 2.5px
@@ -51,8 +63,10 @@ img.home{
 }
 .movie-card a img:hover{
   box-shadow: 0px 0px 15px 5px #b31212;
-  scale: 1.05;
+  
+  scale: 1.08;
 }
+
   
 ////// TEST ELLIPSE
 //   .text-ellipsis {
