--- a/src/app/ui/movies/movies-list/movies-list.html
+++ b/src/app/ui/movies/movies-list/movies-list.html
@@ -2,7 +2,7 @@
     <div class="title">
         <h3>{{categoryTitle()}}</h3>
         @if (this._router.url === '/home'){
-            <button class="custom-btn btn-4" [routerLink]="'/movies/' + category()"><mat-icon>fast_forward</mat-icon></button>
+            <button class="button-glob grey" [routerLink]="'/movies/' + category()"><mat-icon>fast_forward</mat-icon></button>
         }
     </div>
     <div class="card-list" [class.home]="isHome()" [class.movies]="!isHome()">
@@ -10,21 +10,23 @@
             @for (item of moviesList().slice(0,8); track $index) { 
                 <div class="movie-card" appearance="outlined">
                     <div class="img">
-                        <a [routerLink]="['/movie', item.id]"><img [class.home]="isHome()" [class.movies]="!isHome()" [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
+                        <a [routerLink]="['/movie', item.id]"><img [class.home]="isHome()" [class.movies]="!isHome()" [src]="'https://image.tmdb.org/t/p/w400' + item.poster_path"></a>
                     </div>
-                    <!-- <div class="title-movie">
-                        {{item.title}}
-                    </div> -->
                 </div>
             }
         }@else {
             @for (item of moviesList(); track $index) { 
                 <div class="movie-card" appearance="outlined">
                     <div class="text-ellipsis" [attr.title]="item.title">
-                        {{item.title}}
+                        @if (api.movieOrTv() === "movie/") {
+                            <p>{{item.title}}</p>
+                        }@else {
+                            <p>{{item.name}}</p>
+                        }
+                        
                     </div>
                     <div>
-                        <a [routerLink]="['/movie', item.id]"><img [class.home]="isHome()" [class.movies]="!isHome()" [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
+                        <a [routerLink]="['/movie', item.id]"><img [class.home]="isHome()" [class.movies]="!isHome()" [src]="'https://image.tmdb.org/t/p/w400' + item.poster_path"></a>
                     </div>
                 </div>
             }
