--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,19 +1,19 @@
-.main-container{
-    height: 100%;
+
+main{
+    background-color: rgb(19, 19, 19);
+    margin: 0;
 }
 .search-content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 .search-container{
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    max-width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  width: 100%;
 }
 .search-bar {
     width: 100%;
+    max-width: 700px;
     margin: 30px;
     margin: 30px 0;
     background: #3b3b3b;
@@ -27,10 +27,10 @@
     box-sizing: border-box;
 }
 .search-btn{
-    position: absolute;
-    top: 51%;
+    
+    
     right: 4px;
-    transform: translateY(-50%);
+    
     border-radius: 50%;
     width: 30px;
     height: 30px;
@@ -48,14 +48,6 @@
 }
 .main-content{
   padding: 15px;
-}
-mat-sidenav{
-    width: 15%;
-    background-color: rgb(0, 0, 0);
-}
-mat-sidenav-content{
-    background-color: rgb(7, 7, 7);
-    margin: 0;
 }
 .btn-4{
     margin-left: 10px;
