--- a/src/app/ui/movie/movie.scss
+++ b/src/app/ui/movie/movie.scss
@@ -1,23 +1,51 @@
 
 .main{
-    padding: 40px;
-    display: flex;
-    justify-content: space-between;
+    padding: 25px;
+    margin: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    
 }
-p, li, h2{
+p, li, h1{
     color: white;
 }
-.info-container{
-     display: flex;
-    flex-direction: column;
-    max-width: 780px;
-    align-items: start;
+h1{
+    text-shadow: 5px 5px 10px rgb(0, 0, 0);
 }
-.img-container{
+.info-container{
     display: flex;
     flex-direction: column;
-    max-width: 780px;
+    justify-content: space-between;
+    max-width: 1280px;
+    align-items: start;
+    background-color: black;
+    padding: 25px;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
+    border-radius: 10px;
+}
+.infos{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.img-container{
+    
+    flex-direction: column;
+    justify-content: end;
+    width: 100%;
+    max-width: 1280x;
     align-items: end;
+    box-sizing: border-box;
+}
+.title{
+    padding-bottom: 15px;
+}
+img{
+    display: block;
+    width: 100%;
+    border-radius: 10px;
+    
 }
 
 img{
