--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,45 +13,35 @@ html, body {
 }
 
 
-.custom-btn {
+.button-glob {
+  border-radius: 8px;
   display: flex;
-  color: #fff;
-  width: 60px;
-  height: 40px;
-  padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
+  align-items: center;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
   font-weight: 500;
-  background: transparent;
+  font-family: inherit;
+  background-color: #00000000;
   cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-  color: #a50000;
-  padding: 0;
-  border: 1px solid #a50000;
-  border-radius: 5px;
-  // box-shadow: 0 0 8px #a50000, 0 0 10px inset;
+  color: #ede5ff;
+  transition: 0.2s;
+  height: 40px;
 }
-.btn-4:hover{
-  box-shadow: 0 0 8px #a50000, 0 0 10px inset;
+
+.button-glob:hover {
+  box-shadow: 0px 0px 17px -4px #ff2626;
+  border-color: #ff0909;
+  color: #f7f5ff;
+  background-color: #5e0000;
 }
-.btn-4:after {
-  position: absolute;
-  content: "";
-  top: 3px;
-  left: 2px;
-  width: 89%;
-  height: 80%;
-  border: 1px solid #a50000;
-  border-radius: 5px;
-  box-shadow: 0 0 8px #a50000 inset;
-  opacity: 0;
-  transition: all 0.3s ease;
+
+.button-glob:active {
+  box-shadow: 0px 0px 17px -7px #ff1818;
+  border-color: #ff0606;
+  transform: scale(0.95);
 }
-.btn-4:hover:after {
-  opacity: 1;
-  
-}
+
 
 
 
