--- a/src/app/ui/home/home.html
+++ b/src/app/ui/home/home.html
@@ -1,3 +1,4 @@
+<app-search-bar></app-search-bar>
 <main>
     <app-movies-list class="movie-list" category="popular" categoryTitle="Populaires"></app-movies-list>
     <br><br>
