--- a/src/app/ui/search-movie-list/search-movie-list.html
+++ b/src/app/ui/search-movie-list/search-movie-list.html
@@ -1,3 +1,4 @@
+<app-search-bar></app-search-bar>
 @if (movieList()) {
     @for (item of movieList(); track $index) { 
         <div class="movie-card" appearance="outlined">
