--- a/src/app/ui/toolbar/toolbar.html
+++ b/src/app/ui/toolbar/toolbar.html
@@ -3,16 +3,12 @@
     <div class="title flex">
         <a href=""><h1>NgMovies</h1></a>
     </div>
-    <div class="movie-mode flex">
-        <button (click)="changeMovieTv()" class="mode-btn">Film / Série<span></span></button>
-    </div>
+    <!-- <div class="movie-mode flex">
+        <button  class="mode-btn">Film / Série<span></span></button>
+    </div> -->
     <div class="toolbar-btn flex">
         <button class="button-glob">Mes films</button>
         <!-- <button><mat-icon>person_outline</mat-icon></button> -->
         <button class="button-glob">Mon compte</button>
     </div>
 </header>
-<!-- <mat-icon>power_settings_new</mat-icon>
-<mat-icon></mat-icon>
-<mat-icon></mat-icon>
-<mat-icon></mat-icon> -->
