--- a/src/app/ui/movies/movies-list/movies-list.scss
+++ b/src/app/ui/movies/movies-list/movies-list.scss
@@ -48,7 +48,7 @@ img.home{
     linear-gradient(transparent, rgba(0,0,0,0.001), rgba(0,0,0,0.01), rgba(0,0,0,0.2));
 }
 .movie-card a img{
-  border-radius: 8px 8px 0 0;
+  border-radius: 8px;
   width: 100%;
   height: auto;
   display: block;
