--- a/src/app/ui/similar-list/similar-list.html
+++ b/src/app/ui/similar-list/similar-list.html
@@ -3,7 +3,7 @@
         <h3>Films similaires</h3>
     </div>
     <div class="card-list">
-        @for (item of similar().splice(0,8); track $index) { 
+        @for (item of similar().slice(0,8); track $index) { 
             <div class="movie-card">
                 <div class="img">
                     <a [routerLink]="['/movie', item.id]"><img [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
