--- a/src/app/ui/toolbar/toolbar.scss
+++ b/src/app/ui/toolbar/toolbar.scss
@@ -14,6 +14,10 @@ header{
 
     }
 }
+h1{
+  color: #d40000;
+  
+}
 
 .flex{
     display: flex;
@@ -21,62 +25,62 @@ header{
 }
 
 
-.mode-btn {
-  border: none;
-  display: block;
-  position: relative;
-  padding: 0.7em 2.4em;
-  font-size: 18px;
-  background: transparent;
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  color: rgb(255, 255, 255);
-  z-index: 1;
-  font-family: inherit;
-  font-weight: 500;
-  border-radius: 5px;
-}
+// .mode-btn {
+//   border: none;
+//   display: block;
+//   position: relative;
+//   padding: 0.7em 2.4em;
+//   font-size: 18px;
+//   background: transparent;
+//   cursor: pointer;
+//   user-select: none;
+//   overflow: hidden;
+//   color: rgb(255, 255, 255);
+//   z-index: 1;
+//   font-family: inherit;
+//   font-weight: 500;
+//   border-radius: 5px;
+// }
 
-.mode-btn span {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  z-index: -1;
-  border: 4px solid rgb(255, 255, 255);
-  border-radius: 5px;
-  box-sizing: border-box;
-}
+// .mode-btn span {
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: transparent;
+//   z-index: -1;
+//   border: 4px solid rgb(255, 255, 255);
+//   border-radius: 5px;
+//   box-sizing: border-box;
+// }
 
-.mode-btn span::before {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 8%;
-  height: 500%;
-  background: black;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-60deg);
-  transition: all 0.6s;
-}
+// .mode-btn span::before {
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   width: 8%;
+//   height: 500%;
+//   background: black;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%) rotate(-60deg);
+//   transition: all 0.6s;
+// }
 
-.mode-btn:hover span::before {
-  transform: translate(-50%, -50%) rotate(-90deg);
-  width: 100%;
-  background: rgb(255, 255, 255);
-}
+// .mode-btn:hover span::before {
+//   transform: translate(-50%, -50%) rotate(-90deg);
+//   width: 100%;
+//   background: rgb(255, 255, 255);
+// }
 
-.mode-btn:hover {
-  color: rgb(0, 0, 0);
-}
+// .mode-btn:hover {
+//   color: rgb(0, 0, 0);
+// }
 
-.mode-btn:active span::before {
-  background: #ff2828;
-}
+// .mode-btn:active span::before {
+//   background: #ff2828;
+// }
 
 
 
